# readit-agent

./: .gitignore  Readme.md  pyproject.toml  test_change.txt
src/readit_agent/: cli.py  decision_tools.py  llm_config.py  prompts.py  saftey_tools.py  state.py
