[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
 
[project]
name = "readit-agent"
version = "0.1.0"
description = "Autonomous LangGraph agent that writes and maintains README files"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "PyGithub>=2.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]
openai = ["langchain-openai>=0.2.0"]
google = ["langchain-google-genai>=2.0.0"]
all = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
]
 
[project.scripts]
readit-agent = "readit_agent.cli:main"
 
[tool.setuptools.packages.find]
where = ["src"]
 